# neug

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  dev_and_test.md
.devcontainer/: devcontainer.json
.github/scripts/: triage_issue.py
.github/workflows/: Linux.yml  OSX.yml  benchmark.yml  build-and-test-common.yml  build-extensions.yml  build-image.yml  build-nightly-wheel.yml  build-wheel.yml  docs.yml  format-check.yml  issue-triage.yml  ldbc-nightly-benchmark.yml  memory-leak-nightly.yml  neug-extension-test.yml  neug-nightly-test.yml  neug-test.yml  nightly-extension-test.yml  nightly-npm-package-test.yml  nightly-pypi-package-test.yml  npm-build-test.yml  npm-package-test.yml  pypi-package-test.yml  release-java-client.yml  release-java-sdk.yml  release-npm.yml  release-wheel.yml  testpypi-package-test.yml  trigger-docs-sync.yml  weekly-build-image.yml  weekly-build-wheel.yml  weekly-ldbc-benchmark.yml  weekly-memory-leak-test.yml  wheels-common.yml
benchmark/interactive/: load_ldbc.py  serve_ldbc.py
cmake/: BuildArrowAsThirdParty.cmake  BuildBRPCAsThirdParty.cmake  NeugNativeArch.cmake  neug_extension.cmake  neug_symbol_visibility.cmake
doc/source/: index.rst
docker/: Makefile  README.md  manifest.sh  neug-release.Dockerfile
example_dataset/ldbc/: load.cypher
example_dataset/modern_graph/: graph.yaml  import.yaml
examples/cpp/: CMakeLists.txt
extension/: CMakeLists.txt
extension/gds/: Performance.md
extension/gds/benchmark/: README.md  graphalytics_bench.py
extension/gds/include/: bfs.h  cdlp.h  kcore.h  lcc.h  leiden.h  louvain.h  page_rank.h  sssp.h  wcc.h
extension/gds/include/impl/: bfs_impl.h  bfs_pred_impl.h  cdlp_impl.h  cdlp_pred_impl.h  kcore_impl.h  kcore_pred_impl.h  lcc_directed_impl.h  lcc_pred_impl.h  lcc_undirected_impl.h  page_rank_directed_impl.h  page_rank_pred_impl.h  page_rank_undirected_impl.h  sssp_impl.h  sssp_pred_impl.h  wcc_impl.h  wcc_pred_impl.h
extension/gds/include/utils/: path_utils.h  subgraph_utils.h
extension/gds/src/: bfs.cc  cdlp.cc  kcore.cc  lcc.cc  leiden.cc  louvain.cc  page_rank.cc  sssp.cc  wcc.cc
extension/gds/src/impl/: bfs_impl.cc  bfs_pred_impl.cc  cdlp_impl.cc  cdlp_pred_impl.cc  kcore_impl.cc  kcore_pred_impl.cc  lcc_directed_impl.cc  lcc_pred_impl.cc  lcc_undirected_impl.cc  leiden_impl.cc  louvain_impl.cc  page_rank_directed_impl.cc  page_rank_pred_impl.cc  page_rank_undirected_impl.cc  sssp_impl.cc  sssp_pred_impl.cc  wcc_impl.cc  wcc_pred_impl.cc
extension/gds/src/utils/: subgraph_utils.cc
extension/httpfs/: CMakeLists.txt
extension/httpfs/include/: glob_utils.h  http_filesystem.h  s3_filesystem.h  s3_options.h
extension/httpfs/src/: http_filesystem.cc  s3_extension.cc  s3_filesystem.cc  s3_options.cc
extension/httpfs/tests/: http_test.cc  s3_test.cc
extension/parquet/: CMakeLists.txt
extension/parquet/include/: parquet_export_function.h  parquet_options.h  parquet_read_function.h
extension/parquet/include/parquet/: arrow_column.h  arrow_context_column.h  arrow_fs_resolver.h  arrow_options.h  arrow_reader.h  arrow_sniffer.h  arrow_type_converter.h  expression_converter.h  record_batch_supplier.h
extension/parquet/src/: arrow_column.cc  arrow_context_column.cc  arrow_fs_resolver.cc  arrow_options.cc  arrow_reader.cc  arrow_sniffer.cc  dataset_builder.cc  expression_converter.cc  parquet_export_function.cc  parquet_options.cc  record_batch_supplier.cc
extension/parquet/tests/: parquet_test.cc  parquet_test.cpp
extension/pattern_matching/include/: pattern_cypher_translator.h  pattern_matching_data_graph_meta.h  pattern_matching_functions.h  pattern_matching_value.h
extension/pattern_matching/include/fastest_lib/: README.md
extension/pattern_matching/include/fastest_lib/src/Base/: base.cpp  base.h  basic_algorithms.cpp  basic_algorithms.h
extension/pattern_matching/include/fastest_lib/src/DataStructure/: graph.cpp  graph.h
extension/pattern_matching/include/fastest_lib/src/SubgraphCounting/: candidate_graph_sampling.cpp  candidate_graph_sampling.h  candidate_tree_sampling.cpp  candidate_tree_sampling.h  cardinality_estimation.cpp  cardinality_estimation.h  option.h
extension/pattern_matching/include/fastest_lib/src/SubgraphMatching/: candidate_space.cpp  candidate_space.h  data_graph.cpp  data_graph.h  pattern_graph.cpp  pattern_graph.h
extension/pattern_matching/src/: pattern_cypher_translator.cpp  pattern_matching_data_graph_meta.cpp  pattern_matching_functions.cpp
extension/test_out_of_tree/: CMakeLists.txt  extension_config.cmake  test_out_of_tree_extension.cc
include/neug/: config.h.in
proto/: error.proto  physical.proto  response.proto
scripts/: build_and_upload_extensions.sh  rename_wheels.sh
skills/codegraph/: SKILL.md  bug-analysis.md  patterns.md  schema.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/compiler/common/types/: CMakeLists.txt  date_t.cpp  dtime_t.cpp  interval_t.cpp  neug_string.cpp  timestamp_t.cpp  types.cpp
src/compiler/common/types/value/: nested.cpp  node.cpp  recursive_rel.cpp  rel.cpp  value.cpp
src/main/: connection.cc  neug_db.cc  query_processor.cc  query_request.cc  query_result.cc
src/server/: brpc_service_mgr.cc  neug_db_service.cc  neug_db_session.cc
src/transaction/: compact_transaction.cc  insert_transaction.cc  read_transaction.cc  undo_log.cc  update_transaction.cc
src/utils/: CMakeLists.txt  access_mode.cc  arrow_utils.cc  datetime_parsers.cc  pb_utils.cc
tests/: CMakeLists.txt
tests/compiler/: CMakeLists.txt  explain_test.cpp  extension_test.cpp  flag_test.cpp  gopt_test.h  ldbc_test.cpp  metadata_test.cpp  param_test.cpp  path_test.cpp
tests/execution/: test_runtime_column.cc  test_value.cc  test_value_column.cc
tests/main/: test_query_request.cc
tests/memory_leak/: CMakeLists.txt  test_memory_leak.py  test_node_create.cc  test_temporary_tables.cc
tests/storage/: CMakeLists.txt  alter_property_test.cc  test_checkpoint.cc  test_copy_temp.cc  test_csr_batch_ops.cc  test_csr_stream_ops.cc  test_edge_table.cc  test_graph_view.cc  (+8 more)
(+579 files in other folders)
